# rust_doge

doge/: .gitignore  Cargo.toml  [WD] Market Protocol.md
doge/doge_common/: Cargo.toml
doge/doge_common/src/: account.rs
doge/doge_market/: Cargo.toml
doge/doge_market/src/: account_ops.rs  buy_transaction.rs  dogemarket.rs  e2e.rs  lib.rs  logger.rs  market.rs  mute_logger.rs  refiller.rs  sell_transaction.rs  service.rs  stdout_logger.rs  tick_deque.rs  txt_file_logger.rs
doge/doge_trader/: Cargo.toml
doge/doge_trader/src/: chart.rs  displayer.rs  event.rs  event_handler.rs  history.rs  interactions.rs  iteraction_logger.rs  lib.rs  logger.rs  main.rs  markets.rs  parser.rs  strategy.rs
doge/doge_trader/src/displayer/: svg_displayer.rs
doge/doge_trader/src/history/: visualizer.rs
doge/doge_trader/src/iteraction_logger/: create_account_graphs.rs  iteraction_logger.rs
doge/doge_trader/src/logger/: noop_logger.rs  stdout_logger.rs  txt_file_logger.rs
doge/doge_trader/src/strategy/: common.rs  interactive_strategy.rs  min_max_strategy.rs  noop_strategy.rs  price_comparison_strategy.rs  random_action_strategy.rs  single_market_random_strategy.rs
graphs/: create_transactions_graphs.rs  create_wallet_graphs.rs  draw_chart.rs  mod.rs
simulations/: compile_multi.sh  compile_single.sh  mini_simulation.cpp  simulation.cpp  simulation_multi  simulation_single  simulations.json  single_sim.py  single_sim_market.json  single_sim_trader.json  single_sim_transactions.json
simulations/old_simulations/really_old/: simulations_no_refill.json  simulations_no_refill.py  simulations_w_refill.json  simulations_w_refill.py
simulations/pics/: explanation.md
simulations/test/multi/: simulations.json  (+1 more)
(+10 files in other folders)
