[package]
name = "doge_trader"
version = "0.1.0"
edition = "2021"

[lib]
name = "doge_trader"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doge_common = { path = "../doge_common" }
# http://advancedprogramming.disi.unitn.it:8000/#
unitn_market_2022 = { version = "1.0.10", registry = "kellnr" }
market_sol = { version = "1.0.6", registry = "kellnr" }
rcnz_market = { version = "0.1.2", registry = "kellnr" }
bose = { version = "1.0.75", registry = "kellnr" }

clap = { version = "4.1.4", features = ["derive"] }
plotters = "0.3.4"
rand = "0.8.5"
itertools = "0.10.1"
